--- a/.github/workflows/hello-world.yml
+++ b/.github/workflows/hello-world.yml
@@ -1,1 +1,10 @@
 name: Hello World
+
+on: push
+
+jobs:
+    hello-world:
+        runs-on: ubuntu-latest
+        steps:
+        - name: Echo Text
+          run: echo "Hello, world!"
